--- a/Pictation/Base.lproj/Main.storyboard
+++ b/Pictation/Base.lproj/Main.storyboard
@@ -901,8 +901,8 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tEk-bw-w55">
-                                <rect key="frame" x="169" y="360" width="110" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tEk-bw-w55">
+                                <rect key="frame" x="160" y="403" width="110" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="l0H-R6-71R"/>
                                     <constraint firstAttribute="height" constant="30" id="tdS-6W-u7v"/>
@@ -911,8 +911,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cNd-8o-HgD">
-                                <rect key="frame" x="279" y="360" width="110" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cNd-8o-HgD">
+                                <rect key="frame" x="270" y="403" width="110" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="7mt-JK-SDZ"/>
                                     <constraint firstAttribute="height" constant="30" id="IMw-44-GeX"/>
@@ -921,8 +921,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nmt-Wg-KCA">
-                                <rect key="frame" x="388" y="360" width="110" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nmt-Wg-KCA">
+                                <rect key="frame" x="379" y="403" width="110" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="zGX-hF-nOW"/>
                                 </constraints>
@@ -1044,8 +1044,8 @@
                                     <action selector="pauseAudioButton:" destination="sKD-UQ-YeW" eventType="touchUpInside" id="n3A-EG-rPj"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8h9-cm-y7o">
-                                <rect key="frame" x="498" y="360" width="120" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8h9-cm-y7o">
+                                <rect key="frame" x="489" y="403" width="120" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="9we-V4-7OL"/>
                                 </constraints>
@@ -1064,6 +1064,32 @@
                                     <action selector="undoButtonHandler:" destination="sKD-UQ-YeW" eventType="touchUpInside" id="P96-BH-Oxi"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uX0-vX-w8K">
+                                <rect key="frame" x="714" y="289" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Select"/>
+                                <connections>
+                                    <action selector="selectSentenceButton:" destination="sKD-UQ-YeW" eventType="touchUpInside" id="fm4-ng-LGy"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8a8-wy-drq">
+                                <rect key="frame" x="189" y="290" width="504" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Are you trying to say:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9i-7a-ze1">
+                                <rect key="frame" x="12" y="294" width="169" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8dE-DA-ePb">
+                                <rect key="frame" x="4" y="328" width="760" height="68"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -1132,6 +1158,8 @@
                         <outlet property="objectPanelState" destination="Nmt-Wg-KCA" id="bk1-Cc-DbW"/>
                         <outlet property="outputSentenceText" destination="trh-9b-JuG" id="aZh-kB-DBb"/>
                         <outlet property="rateLabel" destination="hVr-eN-PVO" id="OHs-Ev-hCd"/>
+                        <outlet property="selectSentencePickerView" destination="8dE-DA-ePb" id="jVp-Gq-1Bx"/>
+                        <outlet property="selectedSentenceSavedInTextBox" destination="8a8-wy-drq" id="bcu-M5-bCg"/>
                         <outlet property="sentenceImages" destination="Bpz-Ff-uJD" id="e9v-P2-Pzw"/>
                         <outlet property="subjectPanelState" destination="tEk-bw-w55" id="EkG-Jx-mKz"/>
                         <outlet property="verbPanelState" destination="cNd-8o-HgD" id="r2h-Mk-fGr"/>
@@ -1154,7 +1182,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="arg-PJ-QV9"/>
         <segue reference="xxE-eh-9xa"/>
-        <segue reference="aVe-0C-psZ"/>
+        <segue reference="Keq-Pd-tLt"/>
         <segue reference="qUM-3B-JQM"/>
         <segue reference="uai-St-tLF"/>
     </inferredMetricsTieBreakers>
